[package]
name = "quiche_mio_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
quiche_endpoint = { git = "https://github.com/birneee/quiche_endpoint" }
mio = { version = "1.0.1", features = ["net", "os-poll", "os-ext"] }
slab = "0.4.9"
log = "0.4.22"
nix = { version = "0.29.0", features = ["uio", "net", "socket"] }
libc = "0.2.155"

[lib]
crate-type = ["staticlib", "cdylib"]
