[package]
name = "quiche_mio_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
quiche_endpoint = { git = "https://github.com/birneee/quiche_endpoint" }
mio = { version = "1.0", features = ["net", "os-poll", "os-ext"] }
slab = "0.4"
log = "0.4"
nix = { version = "0.29", features = ["uio", "net", "socket"] }
libc = "0.2"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]
